// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLink> should add class active when is active 1`] = `
<div>
  <a
    class="button active"
    href="/explore"
  >
    <svg />
    Content
  </a>
</div>
`;

exports[`<NavLink> should render icon and text> 1`] = `
<div>
  <a
    class="button"
    href="/explore"
  >
    <svg />
    Content
  </a>
</div>
`;
